# numerical-mesh

./: CMakeLists.txt  README.md
cmake/: numerical-mesh-config.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
include/: numerical-mesh-integration.h  numerical-mesh.h
python/: CMakeLists.txt  numerical-mesh-integration-py.cpp  numerical-mesh-py.cpp
python/integration/: CMakeLists.txt  numerical-mesh-integration-py.cpp
test/: CMakeLists.txt  test_mesh.cpp  test_mesh_integration.cpp
